Modified some id names.

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 </head>
 <body>
     <main>
-        <section id="bookLibrary">
+        <section id="library">
             <header id="libraryHeader">
                 <h1>My library</h1>
                 <button type="button" class="material-icons" id="dark-mode">dark_mode</button>
-                <div id="read-progress">
+                <div id="readProgress">
                     <label for="books-read"></label>
                     <progress value="50" max="100" id="books-read"></progress>
                 </div>
             </header>
-            <div id="libraryContent">
+            <div id="libraryBody">
             </div>
         </section>
 
